# BigData

./: Application_Big_Data.py  README.md  pyproject.toml
.devcontainer/: devcontainer.json
Scrapping/: data_2_all_movie.json  data_commentaire_prov.json
pages/: 1_Scrapping_des_données.py  2_Prétraitement_des_données.py  3_Base_de_Donnée.py  4_Représentation_des_pays_d'origine_des_films.py  5_Distribution_des_genres_de_film.py  6_Distribution_des_variables_quantitatives.py  7_Representation_des_relations_entre_variables.py  8_Choix_de_film_avec_critères.py  9_Choix_de_film_aléatoirement.py  test.ipynb
