[tool.poetry]
name = "applications"
version = "0.1.0"
description = "Application film"
authors = ["Basma-G <127091566+Basma-Ghaffour@users.noreply.github.com>"]
license = "CC BY-NC"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
streamlit = "^1.32.2"
pandas = "^2.2.1"
plotly = "^5.20.0"
numpy = "^1.26.4"
streamlit-elements = "^0.1.0"
requests = "^2.31.0"
selenium = "^4.19.0"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
